welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: not found: value estSurcaseOrange
if(estSurcaseOrange){caseOrange = caseOrange + 1}
   ^