welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {

var caseOrange = 0
var nbB = 0
while(2 * nbB < caseOrange + 1 || 2 * nbB > caseOrange + 1){avance()
if(estSurBiscuit){nbB = nbB + 1}
if(estSurcaseOrange){caseOrange = caseOrange + 1}
}
}